@@ -21,7 +21,8 @@ import re
 from unittest import TestCase
 from prompt_toolkit.buffer import Buffer
 from prompt_toolkit.document import Document
-from .repl import SQLCompleter, Capitalizer, create_buffer
+from prompt_toolkit.token import Token
+from .repl import SQLCompleter, Capitalizer, create_buffer, _get_toolbar_tokens
 from .command import CrateCmd
 
 class SQLCompleterTest(TestCase):
@@ -136,3 +137,18 @@ class AutoCapitalizeTest(TestCase):
 
         prefix = u'SELECT testCol FROM'
         self.assertFalse(self.capitalizer.is_prefix(string, prefix))
+
+
+class ToolbarTest(TestCase):
+
+    def test_get_session_tokens(self):
+        result = _get_toolbar_tokens(lambda: True, 'crate', ['http://host1:4200', 'https://host2:4200'])
+        self.assertEqual(result, [(Token.Toolbar.Status.Key, 'USER: '),
+                           (Token.Toolbar.Status, 'crate'),
+                           (Token.Toolbar.Status, ' | '),
+                           (Token.Toolbar.Status.Key, 'HOSTS: '),
+                           (Token.Toolbar.Status, 'host1:4200, host2:4200')])
+
+    def test_get_not_connected_tokens(self):
+        result = _get_toolbar_tokens(lambda: False, 'crate', None)
+        self.assertEqual(result, [(Token.Toolbar.Status, 'not connected')])
